--- a/NIMELSSA Login.html
+++ b/NIMELSSA Login.html
@@ -17,21 +17,29 @@
 			<a href="#">Forgot Your Password?</a>
 		</div>
 			<div class="button">
-                <a href="NIMELSSA E-LIBRARY.html" class="btn">Login</a>
+                <a href="index.html" class="btn">Login</a>
 			</div>
 			
 			<div class="signup">
-				<p>Don't Have An Account? <a href="#">Signup Now</a></p>
+				<p>Don't Have An Account? <a href="Signup page.html">Signup Now</a></p>
             </div>
 		</form>
 		</div>
 		<div class="image-section">
 			<div class="content">
-				<h3>Your Life is a Message to the World.</h3>
-				<p>Make it Inspiring</p>
+				<h3>Your Life is a Message to the World.<h4>Make it Inspiring!</h4></h3>
 				<p>President Emmawell, 2024</p>
 			</div>
 		</div>
 	</div>
+	<section>
+		<footer>
+            <p>&copy; 2024 Fentech. All rights reserved.</p>
+        </footer>
+    
+	<footer>
+		<p>&copy; <B>Compiled By FENTECH</B> </p>
+	</footer>
+</section>
 </body>
 </html>
