--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <div class="main">
                 <div class="logo">
-                    <img src="C:\Users\DPI\Desktop\m-removebg-preview (1).png">
+                    <img src="image\m-removebg-preview (1).png">
                 </div>
                 <ul>
                     <li class="active"><a href="NIMELSSA Login.html">LOGIN</a></li>
@@ -43,7 +43,7 @@
         </header>
         <section>
         <footer>
-            <p>&copy; <B>FENTECH</B> </p>
+            <p>&copy; <B>Compiled By FENTECH</B> </p>
         </footer>
         </section>
     </body>
