--- a/NIMELSSA about.html
+++ b/NIMELSSA about.html
@@ -7,37 +7,40 @@
         <link rel="stylesheet" href="NIMELSSA about style.css">
     </head>
     <body>
-       <header>
-        <div class="hero">
-            <div class="overlay">
-            <h1> Welcome to heroinesinc.</h1>
-            <p>A safe space and platform to help</p>
+        <div class="container">
+            <div class="content-section">
+               <div class="text-section">
+                  <h1> Our Dream is </h1>
+                    <h1>to Enhance Learning</h1>
+                    <h1>through the Medlab E-Library.</h1>
+                  <p></p>
+                  <p>It is with great pleasure and honor that we welcome each and every one of you to our newly created website.
+                    As President, we are delighted to see our community embracing technology and innovation to connect and serve you better.
+                    This website is a testament to our commitment to providing accessible and efficient services to all our citizens. 
+                    We encourage you to explore the various features and resources available on the website.
+                    Your feedback and suggestions are valuable as we strive to continuously improve and tailor our services to meet your expectations.
+                    Together let us make the most out of this digital platform to stregthen our community, foster collaborationand enhance the quality of life for all Medlab citizens.
+                    Thank You for your support and we look forward to our continued journey of progress and prosperity.
+                </p>
         </div>
-        <div class="hero-image">
-            <img src="C:\Users\DPI\Desktop\p.jpg" alt="president">
-        </div>
-        </div>
-       </header>
-
-       <main>
-        <section class="about-us">
-            <div class="about-content">
-            <div class="about-text">
-            <h2>About Us</h2>
-            <p> we help them embark on a journey to find themselves</p>
-            <p>since 2017, we have been working</p>
-        </div>
-        <div class="about-image">
-            <img src="C:\Users\DPI\Desktop\p.jpg" alt="president">
-            </div>
     </div>
-        </section>
-       </main>
+      <div class="image-section">
+        <img src="image\IMG-20241017-WA0097.jpg">
+        <h2>Warm Regards,<p>Emmanuel Anyamele Led Admin.</p></h2>   
+    </div>
+</div>
+<div class="button">
+    <a href="index.html" class="btn">BACK</a>
+</div>
+<footer>
+    <p>&copy; 2024 Fentech. All rights reserved.</p>
+</footer>
 
-       <footer>
-        <div class="footer text">
-            <P>&copy; FENTECH</P>
-        </div>       
-    </footer>
+<footer>
+    <p>&copy; <B>Compiled By FENTECH</B> </p>
+</footer>
     </body>
 </html>
+
+
+       
