--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 <ul>
                     <li class="active"><a href="NIMELSSA Login.html">LOGIN</a></li>
                     <li><a href="NIMELSSA about.html">ABOUT</a></li>
-                    <li><a href="medlab 100level.html">100 LVL</a></li>
-                    <li><a href="medlab 200level.html">200 LVL</a></li>
-                    <li><a href="medlab 300level.html">300 LVL</a></li>
+                    <li><a href="NIMELSSA 100level.html">100 LVL</a></li>
+                    <li><a href="NIMELSSA 200level.html">200 LVL</a></li>
+                    <li><a href="NIMELSSA 300level.html">300 LVL</a></li>
                     <li><a href="medlab 400level.html">400 LVL</a></li>
                     <li><a href="medlab 500level.html">500 LVL</a>
                     <li><a href="#">NOVELS</a>
                     <div class="sub-menu">
                         <ul>
                             <li><a href="#">Gifted hands</a></li>
-                            <li><a href="#">The big picture</a></li>
+                            <li><a href="novels\The Big Picture- Ben Carson.pdf" target="_blank">The Big Picture</a></li>
                             <li><a href="#">Take the risk</a></li>
                         </ul>
                     </div>
