Hello world from Alive

--- a/NIMELSSA 200level.html
+++ b/NIMELSSA 200level.html
@@ -33,7 +33,7 @@
         <h2 id="Second Semester"  class="menu-cart-tittle"> SECOND SEMESTER</h2>
         <section>
             <div class="menu-item">
-                <img src="C:\Users\DPI\Desktop\Programming Projects\Html Css Js\NIMELSSA\image\history&philo.jpeg" alt="history&philosophy">
+                <img src="./image\history&philo.jpeg" alt="history&philosophy">
                 <div class="menu-item-details">
                     <h3>GST 106</h3>
                     <p> <a href="100 level\100LEVEL SECOND SEMESTER COMPILED PAST QUESTIONS.pdf" target="_blank">Learn More</a></p>
