--- a/NIMELSSA 300level.html
+++ b/NIMELSSA 300level.html
@@ -24,7 +24,7 @@
                 <img src="image\all subjects 200.jpeg" alt="all subjects">
                 <div class="menu-item-details">
                     <h3>ALL SUBJECTS</h3>
-                    <p> <a href="300 level\300level past questions courtesy OKORAFOR REAL.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="300 level/300level past questions courtesy OKORAFOR REAL.pdf" target="_blank">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -33,7 +33,7 @@
         <h2 id="Second Semester"  class="menu-cart-tittle"> SECOND SEMESTER</h2>
         <section>
             <div class="menu-item">
-                <img src="image\all subjects 200.jpeg" alt="All subjects">
+                <img src="image/all subjects 200.jpeg" alt="All subjects">
                 <div class="menu-item-details">
                     <h3>ALL SUBJECTS</h3>
                     <p> <a href="300 level\300l_past_questions-1.pdf" target="_blank">Learn More</a></p>
@@ -45,40 +45,115 @@
             <h2 id="Notes" class="menu-cart-tittle"> NOTES</h2>
     <section>
             <div class="menu-item">
-                <img src="image\haematology.jpeg" alt="Haematology">
+                <img src="image/haematology.jpeg" alt="Haematology">
                 <div class="menu-item-details">
                     <h3>INTRO. TO MLS (Haematology)</h3>
-                    <p> <a href="300 level\Introduction_To_MLS_(Haematology).pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="300 level/Introduction_To_MLS_(Haematology).pdf" target="_blank">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
 
             <div class="menu-item">
-                <img src="image\haematology.jpeg" alt="Haematology">
+                <img src="image/haematology.jpeg" alt="Haematology">
                 <div class="menu-item-details">
                     <h3>INSTRUMENTATION IN MLS (Haematology)</h3>
-                    <p> <a href="300 level\Instrumentation In MLS (Haematology).pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="300 level/Instrumentation In MLS (Haematology).pdf" target="_blank">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
 
             <div class="menu-item">
-                <img src="image\chempath.jpeg" alt="chem.path.">
+                <img src="image/chempath.jpeg" alt="chem.path.">
                 <div class="menu-item-details">
                     <h3>CHEM. PATH.</h3>
-                    <p> <a href="300 level\ChemPath_Note.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="300 level/ChemPath_Note.pdf" target="_blank">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
 
             <div class="menu-item">
-                <img src="image\biomedical elec.jpeg" alt="biomedical electronics">
+                <img src="image/biomedical elec.jpeg" alt="biomedical electronics">
                 <div class="menu-item-details">
                     <h3>BIOMEDICAL ELECTRONICS NOTE</h3>
-                    <p> <a href="300 level\Biomedical Electronics Note.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="300 level/Biomedical Electronics Note.pdf" target="_blank">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
+
+            <div class="menu-item">
+                <img src="image/gen path.jpeg" alt="general pathology">
+                <div class="menu-item-details">
+                    <h3>GENERAL PATHOLOGY NOTE</h3>
+                    <p> <a href="300 level/General Pathology ( PDFDrive ).pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+            <div class="menu-item">
+                <img src="image/pathology.jpeg" alt="INTRODUCTION TO PATH">
+                <div class="menu-item-details">
+                    <h3>INTRODUCTION TO PATH NOTE</h3>
+                    <p> <a href="300 level/INTRODUCTION TO PATH. PTH322.pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+            <div class="menu-item">
+                <img src="image/microbiology.jpeg" alt="microbiology part of MLS procedure">
+                <div class="menu-item-details">
+                    <h3>Microbiology Part Of MLS Procedure NOTE</h3>
+                    <p> <a href="300 level/microbiology part of MLS procedure.pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+            <div class="menu-item">
+                <img src="image/immunology.jpeg" alt="IMMUNOLOGY">
+                <div class="menu-item-details">
+                    <h3>IMMUNOLOGY NOTE</h3>
+                    <p> <a href="300 level/Immunology pdf.pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+            <div class="menu-item">
+                <img src="image/mls lab posting .jpeg" alt="MLS LAB POSTING NOTE">
+                <div class="menu-item-details">
+                    <h3>MLS LAB POSTING NOTE</h3>
+                    <p> <a href="300 level/MLS_310_LAB_POSTING_2.pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+            <div class="menu-item">
+                <img src="image/haematology.jpeg" alt="MLS 332">
+                <div class="menu-item-details">
+                    <h3>MLS 332 NOTE</h3>
+                    <p> <a href="300 level/Mls_332_Hematology-1.pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+            <div class="menu-item">
+                <img src="image/instru. in mls.jpeg" alt="Chem Path">
+                <div class="menu-item-details">
+                    <h3>Instrumentation in MLS NOTE</h3>
+                    <p> <a href="300 level/Instrumentation_In_MLS_(Chem._Path).pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+            <div class="menu-item">
+                <img src="image/pharmacology.jpeg" alt="Pharmacology">
+                <div class="menu-item-details">
+                    <h3>PHARMACOLOGY NOTE</h3>
+                    <p> <a href="300 level/Pharmacology II Note.pdf" target="_blank">Learn More</a></p>
+                    <span class="price">$0.00</span>
+                </div>
+            </div>
+
+
+            
            
             <div class="button">
                 <a href="index.html" class="btn">BACK</a>
