--- a/index.html
+++ b/index.html
@@ -21,17 +21,8 @@
             <p><a href="NIMELSSA 100level.html">100 LVL</a></p>
             <p><a href="NIMELSSA 200level.html">200 LVL</a></p>
             <p><a href="NIMELSSA 300level.html">300 LVL</a></p>
-            <p><a href="medlab 400level.html">400 LVL</a></p>
-            <p><a href="medlab 500level.html">500 LVL</a>
-            <p><a href="#">NOVELS</a>
-                <!-- <div class="sub-menu">
-                    <ul>
-                        <li><a href="#">Gifted hands</a></li>
-                        <li><a href="novels\The Big Picture- Ben Carson.pdf" target="_blank">The Big Picture</a></li>
-                        <li><a href="#">Take the risk</a></li>
-                    </ul>
-                </div> -->
-            </p>
+            <p><a href="NIMELSSA 400level.html">400 LVL</a></p>
+            <p><a href="medlab 500level.html">500 LVL</a></p>
         </div>
     </header>
     <div class="menu">
@@ -40,7 +31,7 @@
     <p><a href="NIMELSSA 100level.html">100 LVL</a></p>
     <p><a href="NIMELSSA 200level.html">200 LVL</a></p>
     <p><a href="NIMELSSA 300level.html">300 LVL</a></p>
-    <p><a href="medlab 400level.html">400 LVL</a></p>
+    <p><a href="NIMELSSA 400level.html">400 LVL</a></p>
     <p><a href="medlab 500level.html">500 LVL</a>
     <p><a href="#">NOVELS</a>
     </div>
