--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p><a href="NIMELSSA 200level.html">200 LVL</a></p>
     <p><a href="NIMELSSA 300level.html">300 LVL</a></p>
     <p><a href="NIMELSSA 400level.html">400 LVL</a></p>
-    <p><a href="medlab 500level.html">500 LVL</a>
+    <p><a href="medlab 500level.html">500 LVL</a></p>
     </div>
 
     <div class="main">
@@ -45,7 +45,7 @@
         </div>
         <div class="button">
             <button>TEXTBOOKS</button>
-            <button>WATCH VIDEOS</button>
+            <button><a href="https://www.youtube.com/">WATCH VIDEOS</a></button>
         </div>
     </div>
     <div class="center">
