--- a/NIMELSSA about.html
+++ b/NIMELSSA about.html
@@ -13,8 +13,8 @@
                   <h1> Our Dream is </h1>
                     <h1>to Enhance Learning</h1>
                     <h1>through the Medlab E-Library.</h1>
-                  <p></p>
-                  <p>It is with great pleasure and honor that we welcome each and every one of you to our newly created website.
+                
+                  <p style="margin-top: 40px;">It is with great pleasure and honor that we welcome each and every one of you to our newly created website.
                     As President, we are delighted to see our community embracing technology and innovation to connect and serve you better.
                     This website is a testament to our commitment to providing accessible and efficient services to all our citizens. 
                     We encourage you to explore the various features and resources available on the website.
@@ -25,20 +25,16 @@
         </div>
     </div>
       <div class="image-section">
-        <img src="image\IMG-20241017-WA0097.jpg">
+        <img src="image/IMG-20241017-WA0097.jpg">
         <h2>Warm Regards,<p>Emmanuel Anyamele Led Admin.</p></h2>   
     </div>
 </div>
-<div class="button">
-    <a href="index.html" class="btn">BACK</a>
-</div>
+<button class="button" href="index.html" class="btn">Back</button>
 <footer>
-    <p>&copy; 2024 Fentech. All rights reserved.</p>
-</footer>
-
-<footer>
+    <p style="margin-bottom: 10px;">&copy; 2024 Fentech. All rights reserved.</p>
     <p>&copy; <B>Compiled By FENTECH</B> </p>
 </footer>
+
     </body>
 </html>
 
