--- a/NIMELSSA about.html
+++ b/NIMELSSA about.html
@@ -26,10 +26,10 @@
     </div>
       <div class="image-section">
         <img src="image/IMG-20241017-WA0097.jpg">
-        <h2>Warm Regards,<p>Emmanuel Anyamele Led Admin.</p></h2>   
+        <h2>Warm Regards, <br /> Emmanuel Anyamele Led Admin.</h2>   
     </div>
 </div>
-<button class="button" href="index.html" class="btn">Back</button>
+<a href="index.html"><button class="button" class="btn">Back</button></a>
 <footer>
     <p style="margin-bottom: 10px;">&copy; 2024 Fentech. All rights reserved.</p>
     <p>&copy; <B>Compiled By FENTECH</B> </p>
