lk nl m.,;l <> K<>kl

--- a/NIMELSSA 100level.html
+++ b/NIMELSSA 100level.html
@@ -33,7 +33,7 @@
                 <img src="./image/philo&logic.jpeg" alt="philo&logic">
                 <div class="menu-item-details">
                     <h3>GST 105</h3>
-                    <p> <a href="100 level\Dr Vin - GST 105(Philosophy & Logic) Past Questions & Answer.pdf" target="_blank" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Dr Vin - GST 105(Philosophy & Logic) Past Questions & Answer.pdf" download="100 level\Dr Vin - GST 105(Philosophy & Logic) Past Questions & Answer.pdf" >Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 <img src="./image/physics.jpeg" alt="physics">
                 <div class="menu-item-details">
                     <h3>PHY 101</h3>
-                    <p> <a href="100 level\Dr Vin - PHY 101 past questions.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Dr Vin - PHY 101 past questions.pdf" download="100 level\Dr Vin - PHY 101 past questions.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 <img src="./image/english.jpeg" alt="english">
                 <div class="menu-item-details">
                     <h3>GST 101</h3>
-                    <p> <a href="100 level\GST 101(Use of English) Past Question & Answer_-_ABSU.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\GST 101(Use of English) Past Question & Answer_-_ABSU.pdf" download="100 level\GST 101(Use of English) Past Question & Answer_-_ABSU.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <img src="./image/philo&logic.jpeg" alt="philo&logic">
                 <div class="menu-item-details">
                     <h3>GST 105</h3>
-                    <p> <a href="100 level\GST 105(Philosophy & Logic) Past Questions & Answer-1.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\GST 105(Philosophy & Logic) Past Questions & Answer-1.pdf" download="100 level\GST 105(Philosophy & Logic) Past Questions & Answer-1.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <img src="./image/igbo.jpeg" alt="igbo">
                 <div class="menu-item-details">
                     <h3>GST 109</h3>
-                    <p> <a href="100 level\GST 109(Basis Igbo), Past Question and Answer_-_ABSU.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\GST 109(Basis Igbo), Past Question and Answer_-_ABSU.pdf" download="100 level\GST 109(Basis Igbo), Past Question and Answer_-_ABSU.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <img src="image/use of library.png" alt="igbo">
                 <div class="menu-item-details">
                     <h3>GST 121</h3>
-                    <p> <a href="100 level\GST 121(Use of Library) Past Questions and Answer_-_ABSU(1).pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\GST 121(Use of Library) Past Questions and Answer_-_ABSU(1).pdf" download="100 level\GST 121(Use of Library) Past Questions and Answer_-_ABSU(1).pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <img src="./image/all subjects.jpeg" alt="all subjects">
                 <div class="menu-item-details">
                     <h3>ALL SUBJECTS</h3>
-                    <p> <a href="100 level\PASS QUESTION.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\PASS QUESTION.pdf" download="100 level\PASS QUESTION.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                 <img src="./image/bio,phy,mat,che.jpeg" alt="All departmental subjects">
                 <div class="menu-item-details">
                     <h3>PHY, CHE, MAT, BIO</h3>
-                    <p> <a href="100 level\PHY, CHE, MAT, and BIO (101).pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\PHY, CHE, MAT, and BIO (101).pdf" download="100 level\PHY, CHE, MAT, and BIO (101).pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 <img src="./image/bio,phy,mat,che.jpeg" alt="All departmental subjects">
                 <div class="menu-item-details">
                     <h3>PHY, CHE, BIO</h3>
-                    <p> <a href="100 level\Sir J.k most Recent Departmental 100Level past questions.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Sir J.k most Recent Departmental 100Level past questions.pdf" download="100 level\Sir J.k most Recent Departmental 100Level past questions.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                 <img src="./image/all gst.jpeg" alt="all gst">
                 <div class="menu-item-details">
                     <h3>ALL GST</h3>
-                    <p> <a href="100 level\Sir J.k most recent past questions on All GST courses for 100Level  First Semester.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Sir J.k most recent past questions on All GST courses for 100Level  First Semester.pdf" download="100 level\Sir J.k most recent past questions on All GST courses for 100Level  First Semester.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                 <img src="./image\che.jpeg" alt="che 101">
                 <div class="menu-item-details">
                     <h3>CHEM 101</h3>
-                    <p> <a href="100 level\Ukoh Martins Chibueze CHE 101 past questions.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Ukoh Martins Chibueze CHE 101 past questions.pdf" download="100 level\Ukoh Martins Chibueze CHE 101 past questions.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                 <img src="./image/mth.jpeg" alt="MTH 101">
                 <div class="menu-item-details">
                     <h3>MTH 101</h3>
-                    <p> <a href="100 level\Dr.Hebron's MAT 101 past questions.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Dr.Hebron's MAT 101 past questions.pdf" download="100 level\Dr.Hebron's MAT 101 past questions.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 <img src="./image/history&philo.jpeg" alt="history&philosophy">
                 <div class="menu-item-details">
                     <h3>GST 106</h3>
-                    <p> <a href="100 level\100LEVEL SECOND SEMESTER COMPILED PAST QUESTIONS.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\100LEVEL SECOND SEMESTER COMPILED PAST QUESTIONS.pdf" download="100 level\100LEVEL SECOND SEMESTER COMPILED PAST QUESTIONS.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                 <img src="./image/physics.jpeg" alt="PHY102">
                 <div class="menu-item-details">
                     <h3>PHY 102</h3>
-                    <p> <a href="100 level\Sir J.k  Solutions to 2021 PHY 102 past questions.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Sir J.k  Solutions to 2021 PHY 102 past questions.pdf" download="100 level\Sir J.k  Solutions to 2021 PHY 102 past questions.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                 <img src="./image/all subjects.jpeg" alt="Departmental">
                 <div class="menu-item-details">
                     <h3>All Departmental</h3>
-                    <p> <a href="100 level\SIR JK COMPILED PAST QUESTIONS FOR 100L SECOND SEMESTER DEPARTMENTAL COURSES.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\SIR JK COMPILED PAST QUESTIONS FOR 100L SECOND SEMESTER DEPARTMENTAL COURSES.pdf" download="100 level\SIR JK COMPILED PAST QUESTIONS FOR 100L SECOND SEMESTER DEPARTMENTAL COURSES.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                 <img src="./image/phy note.jpeg" alt="phy note">
                 <div class="menu-item-details">
                     <h3>PHY 101</h3>
-                    <p> <a href="100 level\Physics Notes and Key points 100 Level 1st Semester.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Physics Notes and Key points 100 Level 1st Semester.pdf" download="100 level\Physics Notes and Key points 100 Level 1st Semester.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                 <img src="./image/mth.jpeg" alt="Mth note">
                 <div class="menu-item-details">
                     <h3>MTH 101</h3>
-                    <p> <a href="100 level\Lecture Note for MAT 101- General Maths for 2022-2023.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Lecture Note for MAT 101- General Maths for 2022-2023.pdf" download="100 level\Lecture Note for MAT 101- General Maths for 2022-2023.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (NIGERIAN HISTORY, CULTURE AND PEOPLE NOTE)</h3>
-                    <p> <a href="100 level\NIGERIAN HISTORY, CULTURE AND PEOPLE_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\NIGERIAN HISTORY, CULTURE AND PEOPLE_Phoenix.pdf" download="100 level\NIGERIAN HISTORY, CULTURE AND PEOPLE_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103</h3>
-                    <p> <a href="100 level\The Book Chapter on Nigerian peoples and Culture- updated_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\The Book Chapter on Nigerian peoples and Culture- updated_Phoenix.pdf" download="100 level\The Book Chapter on Nigerian peoples and Culture- updated_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (RELIGION & CULTISM IN NIGERIA TERTIARY INSTITUTION NOTE)</h3>
-                    <p> <a href="100 level\RELIGION AND CULTISM IN NIGERIA TERTIARY INSTITUTION_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\RELIGION AND CULTISM IN NIGERIA TERTIARY INSTITUTION_Phoenix.pdf" download="100 level\RELIGION AND CULTISM IN NIGERIA TERTIARY INSTITUTION_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -221,7 +221,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (NIGERIA UNDER COLONIAL RULE NOTE)</h3>
-                    <p> <a href="100 level\NIGERIA UNDER COLONIAL RULE_104220_041134_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\NIGERIA UNDER COLONIAL RULE_104220_041134_Phoenix.pdf" download="100 level\NIGERIA UNDER COLONIAL RULE_104220_041134_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (EVOLUTION OF NIGERIA AS A POLITICAL UNIT NOTE)</h3>
-                    <p> <a href="100 level\EVOLUTION OF NIGERIA AS A POLITICAL UNIT_075010_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\EVOLUTION OF NIGERIA AS A POLITICAL UNIT_075010_Phoenix.pdf" download="100 level\EVOLUTION OF NIGERIA AS A POLITICAL UNIT_075010_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -239,7 +239,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (NIGERIA & CHALLENGES OF NATION BUILDING NOTE)</h3>
-                    <p> <a href="100 level\NIGERIA AND CHALLENGES OF NATION BUILDING_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\NIGERIA AND CHALLENGES OF NATION BUILDING_Phoenix.pdf" download="100 level\NIGERIA AND CHALLENGES OF NATION BUILDING_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -248,7 +248,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (SOCIAL JUSTICE AND NATIONAL DEVELOPMENT NOTE)</h3>
-                    <p> <a href="100 level\SOCIAL JUSTICE AND NATIONAL DEVELOPMENT_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\SOCIAL JUSTICE AND NATIONAL DEVELOPMENT_Phoenix.pdf" download="100 level\SOCIAL JUSTICE AND NATIONAL DEVELOPMENT_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -257,7 +257,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (JUDICIARY NOTE)</h3>
-                    <p> <a href="100 level\JUDICIARY[1]_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\JUDICIARY[1]_Phoenix.pdf" download="100 level\JUDICIARY[1]_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (CULTISM NOTE)</h3>
-                    <p> <a href="100 level\CULTISM_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\CULTISM_Phoenix.pdf" download="100 level\CULTISM_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -276,7 +276,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (CULTISM AND POLITICS IN NIGERIA NOTE)</h3>
-                    <p> <a href="100 level\Cultism and Politics in Nigeria_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\Cultism and Politics in Nigeria_Phoenix.pdf" download="100 level\Cultism and Politics in Nigeria_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (NORMS AND VALUES NOTE)</h3>
-                    <p> <a href="100 level\NORMS AND VALUES_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\NORMS AND VALUES_Phoenix.pdf" download="100 level\NORMS AND VALUES_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -294,11 +294,13 @@
                 <img src="./image/gst 103.jpeg" alt="GST 103">
                 <div class="menu-item-details">
                     <h3>GST 103 (MORAL, RE-ORIENTATION NOTE)</h3>
-                    <p> <a href="100 level\MORALS, RE-ORIENTATION_Phoenix.pdf" target="_blank">Learn More</a></p>
+                    <p> <a href="100 level\MORALS, RE-ORIENTATION_Phoenix.pdf" download="100 level\MORALS, RE-ORIENTATION_Phoenix.pdf">Learn More</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
+         <a href="index.html">
             <button class="btn" style="margin-top: 20px; border: none; padding: 15px 10px; width: 120px; font-size: 1.1rem; border-radius: 25px;">Back</button>
+         </a>
         </section>
 
         <style>
